<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_my_list"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/fragment_name_my_list" />
        <item
            android:id="@+id/nav_all_goods"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/fragment_name_all_goods" />
        <item
            android:id="@+id/nav_popular"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/fragment_name_pop" />
    </group>
    <group
        android:id="@+id/share_section" android:checkableBehavior="none">
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/send_my_list" />
    </group>
</menu>
