<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.activity.MainActivity">


    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>


    <FrameLayout
        android:id="@+id/flContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />


    <com.getbase.floatingactionbutton.FloatingActionsMenu
        android:id="@+id/fam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        fab:fab_addButtonColorNormal="@color/accent"
        fab:fab_addButtonColorPressed="@color/divider"
        fab:fab_addButtonPlusIconColor="@color/white"
        fab:fab_labelStyle="@style/menu_labels_style">

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_add_good"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_colorNormal="@color/accent"
            fab:fab_icon="@drawable/ic_action_box"
            fab:fab_title="@string/fab_add_good" />

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_add_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_colorNormal="@color/accent"
            fab:fab_icon="@drawable/ic_action_boxes"
            fab:fab_title="@string/fab_add_category" />

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_clean_bought"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_colorNormal="@color/accent"
            fab:fab_icon="@drawable/ic_check_white_24dp"
            fab:fab_title="@string/fab_clean_bought" />

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_send_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_colorNormal="@color/accent"
            fab:fab_colorPressed="@color/drawer"
            fab:fab_icon="@drawable/ic_share_variant_white_24dp"
            fab:fab_title="@string/fab_send_list" />

    </com.getbase.floatingactionbutton.FloatingActionsMenu>

</android.support.design.widget.CoordinatorLayout>
